// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormSubmit renders expected elements 1`] = `
<Button
  id="test"
  type="primary"
/>
`;

exports[`FormSubmit renders expected elements when is changed returns false 1`] = `
<Button
  id="test"
  type="tertiary"
/>
`;
